Add record for rarity color ranges